--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,87 @@
 * {
     box-sizing: border-box;
 }
+
+body {
+    font-family: sans-serif;
+    font-size: 17px;
+    color: #926239;
+
+    line-height: 1.6;
+    text-align: center;
+    margin: 0;
+    min-width: 250px;
+    min-height: 250px;
+}
+
+h1 {
+    font-size: 50px;
+    line-height: 1.2;
+    margin: 0;
+    padding: 150px 0 0;
+
+    }
+
+a {
+    display: inline;
+text-decoration: none;
+color: white;
+line-height: 50px;
+border: 1px solid #926239;
+padding: 20px;
+border-radius: 10px;
+}
+
+a:hover {
+    background: #926239;
+    color: #fff;
+}
+
+.section-1 {
+    font-size: 20px;
+ }
+
+header {
+    background-image: url(./imgg/beachshowcase.jpg);
+   
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 20px;
+   min-height: 50vh;
+
+}
+
+.section-a {
+    background-color: #926239;
+    color: white;
+    padding: 20px;
+
+}
+
+.footer {
+    display: inline-block;
+}
+.footer {
+    font-size: 0;
+    min-width: 250px;
+}
+
+.section-b {
+    display: inline-block;
+    width: 33%;
+    background-color: #926239;
+    color: white;
+    
+}
+.section-c {
+    display: inline-block;
+    width: 33%;
+}
+
+.section-d {
+    display: inline-block;
+    width: 33%;
+    background-color: #926239;
+    color: white;
+}
